feat: add core Hajj content including rituals, guides, and checklists

--- a/src/content/docs/guide/after.mdx
+++ b/src/content/docs/guide/after.mdx
@@ -1,5 +1,95 @@
 ---
 title: After Hajj
+description: What to do after completing the rites of Hajj.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+Completing the rites of Hajj is a major milestone — but your spiritual journey continues. The Prophet ﷺ emphasized both reflection and vigilance after Hajj.
+
+---
+
+## 1. Perform Tawaf al-Wada’ (Farewell Tawaf)
+
+Before leaving Makkah, every pilgrim must perform a final circumambulation of the Ka‘bah.
+
+<Citation
+  translation="The people were ordered to make the Tawaf of the Ka‘bah the last thing before leaving (Makkah), except for menstruating women."
+  source="Sahih al-Bukhari 1755"
+  sourceLink="https://sunnah.com/bukhari:1755"
+/>
+
+- This is **obligatory** for all pilgrims **except** menstruating women.
+- Perform 7 circuits around the Ka‘bah in the usual manner.
+
+---
+
+## 2. Reflect and Renew Commitment
+
+The Prophet ﷺ said:
+
+<Citation
+  translation="Whoever performs Hajj and does not engage in sexual relations, nor commit sin or dispute unjustly during Hajj, will return like the day his mother gave birth to him."
+  source="Sahih al-Bukhari 1521"
+  sourceLink="https://sunnah.com/bukhari:1521"
+/>
+
+If your Hajj was sincere and accepted, your sins are forgiven. Let that clean slate reflect in your character and choices moving forward.
+
+---
+
+## 3. Signs of an Accepted Hajj
+
+Scholars mention signs that Hajj was accepted:
+
+- Change in behavior and increased obedience
+- Detachment from sinful habits
+- Love for dhikr, Qur’an, salah, and righteous company
+- Continued humility and reliance on Allah
+
+Ibn al-Qayyim رحمه الله said:  
+_“The sign of an accepted Hajj is that after returning, a person becomes better than before.”_
+
+---
+
+## 4. Stay Connected to the Spirit of Hajj
+
+- Make sincere du‘a often
+- Guard your five daily prayers
+- Practice sabr and ihsan with people
+- Increase in Qur’an and charity
+- Avoid old sinful habits
+
+---
+
+## 5. Share the Experience
+
+- Teach others what you learned
+- Be grateful, not arrogant
+- Recognize: this was an invitation from Allah ﷻ — not your own merit
+
+---
+
+## 6. Visiting Madinah (Optional)
+
+While not part of Hajj, it is highly recommended to visit **Madinah** and pray in the Prophet’s ﷺ mosque.
+
+<Citation
+  translation="One prayer in my mosque is better than a thousand prayers elsewhere, except Al-Masjid Al-Haram."
+  source="Sahih al-Bukhari 1190"
+  sourceLink="https://sunnah.com/bukhari:1190"
+/>
+
+See [Visiting Madinah](/guide/visiting-madinah) for detailed etiquette.
+
+---
+
+## Summary
+
+| Focus             | Actions                                                      |
+|-------------------|--------------------------------------------------------------|
+| Final ritual      | Perform Tawaf al-Wada’ before leaving Makkah                 |
+| Spiritual state   | Maintain purity, humility, and connection to Allah           |
+| Long-term change  | Let Hajj reflect in your behavior and choices going forward  |
+| Knowledge sharing | Educate others with wisdom and humility                      |
+| Optional visit    | Visit the Prophet’s ﷺ mosque in Madinah                      |
