--- a/src/content/docs/guide/day-1.mdx
+++ b/src/content/docs/guide/day-1.mdx
@@ -1,5 +1,84 @@
 ---
-title: Day 1 - 8th Dhul Hijjah (Mina)
+title: Day 1 – 8th Dhul Hijjah (Mina)
+description: What to do on Yawm at-Tarwiyah – the first day of Hajj.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+The 8th of Dhul Hijjah is called **Yawm at-Tarwiyah**. It marks the beginning of the Hajj rites. Pilgrims travel to **Mina**, where they spend the day and night in worship, preparing for the standing at Arafah the next day.
+
+---
+
+## 1. Re-enter Ihram (if performing Tamattu’)
+
+If you completed Umrah earlier and exited Ihram, today you make a fresh intention for Hajj and re-enter Ihram.
+
+> Intention: _Labbaika Hajjan_ — “O Allah, I intend Hajj.”
+
+Recite the **Talbiyah** frequently once in Ihram:
+
+<Citation
+  arabic="لَبَّيْكَ اللَّهُمَّ لَبَّيْكَ، لَبَّيْكَ لَا شَرِيكَ لَكَ لَبَّيْكَ، إِنَّ الْحَمْدَ وَالنِّعْمَةَ لَكَ وَالْمُلْكَ، لَا شَرِيكَ لَكَ"
+  transliteration="Labbayk Allahumma Labbayk, Labbayka lā sharīka laka Labbayk, innal-ḥamda wan-ni‘mata laka wal-mulk, lā sharīka lak."
+  translation="Here I am, O Allah, here I am. You have no partner. Indeed, all praise, grace, and sovereignty are Yours. You have no partner."
+  source="Sahih al-Bukhari 1549"
+  sourceLink="https://sunnah.com/bukhari:1549"
+/>
+
+---
+
+## 2. Depart to Mina
+
+After sunrise, head to **Mina** (about 8 km from Makkah). Walking is encouraged if physically possible, otherwise any means of transport may be used.
+
+The Prophet ﷺ left for Mina on the 8th of Dhul Hijjah and prayed there.
+
+<Citation
+  translation="It was narrated from Ibn 'Abbas that the Messenger of Allah (ﷺ) prayed in Mina, on the Day of Tarwiyah (the 8th of Dhul-Hijjah), Zuhr, 'Asr', Maghrib, 'Isha' and Fajr, then he went in the morning to 'Arafat."
+  source="Sunan Ibn Majah 3004"
+  sourceLink="https://sunnah.com/bukhari:1651"
+/>
+
+---
+
+## 3. Pray Dhuhr to Fajr in Mina
+
+You should offer:
+
+- Dhuhr
+- Asr
+- Maghrib
+- Isha (all on the 8th)
+- Fajr (on the 9th)
+
+All prayers are to be offered **shortened** (2 rak‘at) and **on time** — **not combined**.
+
+<Citation
+  translation="The Prophet ﷺ prayed Dhuhr, Asr, Maghrib, Isha in Mina, shortening the prayers, each at its proper time."
+  source="Sahih Muslim 1218"
+  sourceLink="https://sunnah.com/muslim:1218"
+/>
+
+---
+
+## 4. Spend the Night in Mina
+
+Remaining in Mina overnight is a **Sunnah Mu’akkadah** — a highly emphasized Sunnah. The Prophet ﷺ and companions did not skip it, and there is no report of them spending this night elsewhere.
+
+---
+
+## Historical Note: Why It’s Called Yawm at-Tarwiyah
+
+“Tarwiyah” refers to preparing for the Day of Arafah. Historically, pilgrims would draw and store water for the journey to Arafah — hence the name.
+
+---
+
+## Summary
+
+| Action                 | Notes                                       |
+|------------------------|---------------------------------------------|
+| Re-enter Ihram         | Only for Tamattu’ pilgrims                  |
+| Recite Talbiyah        | Begins after intention                      |
+| Travel to Mina         | After sunrise on the 8th                    |
+| Pray 5 prayers         | Shortened, not combined                     |
+| Spend night in Mina    | Strongly emphasized Sunnah                  |
