--- a/src/content/docs/guide/day-2.mdx
+++ b/src/content/docs/guide/day-2.mdx
@@ -1,5 +1,85 @@
 ---
-title: Day 2 - Arafah
+title: Day 2 – 9th Dhul Hijjah (Arafah)
+description: Standing at Arafah – the essence and peak of Hajj.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+The 9th of Dhul Hijjah is the most important day of Hajj. The Prophet ﷺ said:
+
+<Citation
+  translation="Hajj is Arafah."
+  source="Sunan al-Tirmidhī 889"
+  sourceLink="https://sunnah.com/tirmidhi:889"
+/>
+
+If someone misses the standing at Arafah, their Hajj is invalid. Even a moment in Arafah between Dhuhr and Maghrib counts.
+
+---
+
+## 1. Depart from Mina After Fajr
+
+- Pray **Fajr** in Mina.
+- Head toward **Arafah** after sunrise.
+- It is Sunnah to pause briefly at **Namirah**, then move into the Arafah boundary.
+
+---
+
+## 2. Pray Dhuhr and Asr Combined at Arafah
+
+At Arafah, the Prophet ﷺ gave his **Farewell Sermon** then prayed **Dhuhr and Asr together**, shortened (2 + 2 rak‘at), during the time of Dhuhr.
+
+<Citation
+  translation="He ﷺ prayed Dhuhr and Asr together at Arafah with one Adhan and two Iqamahs."
+  source="Sahih al-Bukhari 1662"
+  sourceLink="https://sunnah.com/bukhari:1662"
+/>
+
+> This is the only day in Hajj where these two prayers are combined and prayed early.
+
+---
+
+## 3. Stand in Arafah (Wuquf)
+
+Between **Dhuhr and Maghrib**, remain within Arafah, facing the Qiblah, standing (or sitting if needed), and making du‘a. This is the heart of Hajj.
+
+<Citation
+  translation="Abdullah ibn Amr reported: The Prophet, peace and blessings be upon him, said, “The best supplication is that which is made on the day of Arafat. The best of it is what was said by myself and the Prophets before me, ‘There is no God but Allah alone, without any partners, unto Him belongs the dominion and all praise, and He has power over all things.’"
+  source="Sunan al-Tirmidhī 3585"
+  sourceLink="https://sunnah.com/tirmidhi:3585"
+/>
+
+Let your du‘a be personal, sincere, and persistent. This is a moment when Allah draws near and forgives.
+
+---
+
+## 4. Do Not Leave Before Maghrib
+
+- The Prophet ﷺ remained in Arafah **until sunset**.
+- Leaving early without excuse requires **a sacrificial penalty (dam)**.
+
+---
+
+## 5. Fasting on Arafah?
+
+- **Highly recommended for non-pilgrims.**
+- **Not recommended** for those performing Hajj, as the Prophet ﷺ did not fast while at Arafah.
+
+<Citation
+  translation="The Day of Arafah expiates the sins of the previous year and the coming year."
+  source="Sahih Muslim 1162"
+  sourceLink="https://sunnah.com/muslim:1162"
+/>
+
+---
+
+## Summary
+
+| Action                   | Notes                                                |
+|--------------------------|------------------------------------------------------|
+| Pray Fajr in Mina        | Then depart after sunrise                            |
+| Optional stop at Namirah | Brief Sunnah stop before entering Arafah             |
+| Dhuhr + Asr              | Combined and shortened at Arafah during Dhuhr time   |
+| Wuquf                    | Between Dhuhr and Maghrib; du‘a is the focus         |
+| Stay until Maghrib       | Leaving earlier is invalid without excuse            |
+| Fasting                  | For non-pilgrims only                                |
