--- a/src/content/docs/guide/day-3.mdx
+++ b/src/content/docs/guide/day-3.mdx
@@ -1,5 +1,110 @@
 ---
-title: Day 3 - Muzdalifah & Rami
+title: Day 3 – 10th Dhul Hijjah (Muzdalifah & Rami)
+description: The busiest day of Hajj – combining Muzdalifah, stoning, sacrifice, and shaving.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+The 10th of Dhul Hijjah is the **Day of Eid**, and one of the most intense and spiritually significant days of Hajj. It involves multiple major rites.
+
+---
+
+## 1. Stay the Night in Muzdalifah
+
+After Maghrib and Isha prayers on the night of the 9th (combined at Muzdalifah), pilgrims sleep in the open at **Muzdalifah**.
+
+- It is Sunnah to remain until **Fajr**.
+- Women, the elderly, and those with valid reasons may leave **after midnight**.
+
+<Citation
+  translation="The Prophet ﷺ allowed the weak ones among his family to leave early at night."
+  source="Sahih Muslim 1290"
+  sourceLink="https://sunnah.com/muslim:1290"
+/>
+
+---
+
+## 2. Pray Fajr at Muzdalifah and Make Du‘a
+
+- After Fajr, move to **Mash‘ar al-Haram** if possible (a specific area in Muzdalifah).
+- Stand facing the Qiblah and make intense du‘a until just before sunrise.
+
+<Citation
+  arabic="لَيْسَ عَلَيْكُمْ جُنَاحٌ أَن تَبْتَغُوا۟ فَضْلًۭا مِّن رَّبِّكُمْ ۚ فَإِذَآ أَفَضْتُم مِّنْ عَرَفَـٰتٍۢ فَٱذْكُرُوا۟ ٱللَّهَ عِندَ ٱلْمَشْعَرِ ٱلْحَرَامِ ۖ وَٱذْكُرُوهُ كَمَا هَدَىٰكُمْ وَإِن كُنتُم مِّن قَبْلِهِۦ لَمِنَ ٱلضَّآلِّينَ"
+  translation="There is no blame on you for seeking the bounty of your Lord ˹during this journey˺. When you return from ’Arafât, praise Allah near the sacred place and praise Him for having guided you, for surely before this ˹guidance˺ you were astray."
+  source="Qur’an 2:198"
+  sourceLink="https://quran.com/2/198"
+/>
+
+---
+
+## 3. Collect Pebbles
+
+- Pick **7 small pebbles** (roughly the size of a chickpea) for stoning **Jamrat al-‘Aqabah**.
+- These pebbles should be clean and collected **from Muzdalifah**.
+
+---
+
+## 4. Proceed to Mina and Perform Rami
+
+- Go to **Jamrat al-‘Aqabah** (the large pillar).
+- Throw **7 pebbles**, one at a time, saying:
+
+> _Allahu Akbar_ with each throw.
+
+<Citation
+  translation="The Prophet ﷺ threw pebbles at Jamrat al-‘Aqabah on the Day of Eid saying 'Allahu Akbar' with each throw."
+  source="Sahih al-Bukhari 1751"
+  sourceLink="https://sunnah.com/bukhari:1751"
+/>
+
+---
+
+## 5. Offer the Sacrifice (Hady)
+
+- If performing **Hajj Tamattu’ or Qiran**, sacrifice is **obligatory**.
+- For **Hajj Ifrad**, it is **recommended**.
+- You may arrange it in advance or witness it being done.
+
+<Citation
+  arabic="فَمَن تَمَتَّعَ بِالْعُمْرَةِ إِلَى الْحَجِّ فَمَا اسْتَيْسَرَ مِنَ الْهَدْيِ"
+  transliteration="Faman tamatta‘a bil-‘umrati ilā al-ḥajji famā is’taysara mina al-hadyi"
+  translation="Whoever performs Umrah [and then] Hajj, let him offer what he can afford of the sacrifice."
+  source="Qur’an 2:196"
+  sourceLink="https://quran.com/2/196"
+/>
+
+---
+
+## 6. Shave or Trim the Hair
+
+- **Men**: Shaving (Halq) is best. Trimming (Taqsir) is allowed.
+- **Women**: Clip a fingertip’s length from the end of the hair.
+
+<Citation
+  translation="May Allah have mercy on those who shave... and those who trim."
+  source="Sahih al-Bukhari 1720"
+  sourceLink="https://sunnah.com/bukhari:1720"
+/>
+
+After this, you exit the state of Ihram (except for intimacy).
+
+---
+
+## 7. Tawaf al-Ifadah (Optional on This Day)
+
+If you have time and energy, you may perform **Tawaf al-Ifadah** today. It is a **pillar of Hajj**, but can also be delayed to later days.
+
+---
+
+## Summary
+
+| Action                   | Notes                                             |
+|--------------------------|---------------------------------------------------|
+| Sleep in Muzdalifah      | Women/elderly may leave after midnight            |
+| Fajr & Du‘a              | At Mash‘ar al-Haram if possible                   |
+| Collect pebbles          | 7 pebbles from Muzdalifah                         |
+| Rami                     | 7 throws at Jamrat al-‘Aqabah only                |
+| Sacrifice                | Obligatory for Tamattu’ and Qiran                 |
+| Shave or trim            | Exits Ihram except for intimacy                   |
+| Tawaf al-Ifadah          | Pillar of Hajj; can be delayed if needed          |
