--- a/src/content/docs/guide/days-4-6.mdx
+++ b/src/content/docs/guide/days-4-6.mdx
@@ -1,5 +1,86 @@
 ---
-title: Days 4–6 - Tashreeq
+title: Days 4–6 – Ayyām at-Tashreeq
+description: The final days of Hajj – continued stoning and remembrance in Mina.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+> “They are the days of eating, drinking, and remembering Allah.”  
+> — Prophet Muhammad ﷺ (Sahih Muslim 1141)
+
+These days — the 11th, 12th, and optionally the 13th of Dhul Hijjah — are known as the **Days of Tashreeq**. Pilgrims remain in **Mina**, continue stoning the three pillars, and spend time in dhikr and worship.
+
+---
+
+## 1. Stoning the Three Jamarat
+
+Each day, you must stone the following:
+
+- **Jamrat al-Sughra** (small)
+- **Jamrat al-Wusta** (middle)
+- **Jamrat al-‘Aqabah** (large)
+
+You throw **7 pebbles at each**, one at a time, saying _Allahu Akbar_ with each throw.
+
+<Citation
+  translation="The Messenger of Allah ﷺ stoned the Jamarat in the days of Tashreeq after the sun had passed its zenith."
+  source="Sahih al-Bukhari 1753"
+  sourceLink="https://sunnah.com/bukhari:1753"
+/>
+
+**Timing:** It is Sunnah to perform Rami **after Dhuhr** and before Maghrib. It is permissible to delay it until sunset.
+
+---
+
+## 2. Stay in Mina
+
+- Pilgrims must remain in Mina during the nights of the 11th and 12th.
+- Staying in Mina these nights is **obligatory**, unless excused (e.g., for serving pilgrims or urgent medical needs).
+
+<Citation
+  translation="Ibn ‘Umar used to say: 'It is Sunnah to spend the nights of the Days of Tashreeq in Mina.' Ibn al-Mundhir said: 'The scholars are unanimously agreed that staying overnight in Mina on the nights of the Days of Tashreeq is obligatory for those who are able.'"
+  source="Al-Mughni by Ibn Qudamah"
+  sourceLink="https://islamqa.info/en/answers/32989"
+/>
+
+---
+
+## 3. Du‘a After Stoning
+
+- After stoning **Jamrat al-Sughra** and **al-Wusta**, pause and make du‘a.
+- After **Jamrat al-‘Aqabah**, **do not** stop for du‘a — move on.
+
+This was the Sunnah of the Prophet ﷺ.
+
+---
+
+## 4. Option to Leave on the 12th
+
+Allah says:
+
+<Citation
+  arabic="فَمَن تَعَجَّلَ فِي يَوْمَيْنِ فَلَا إِثْمَ عَلَيْهِ وَمَنْ تَأَخَّرَ فَلَا إِثْمَ عَلَيْهِ لِمَنِ اتَّقَى"
+  transliteration="Faman ta‘ajjala fī yawmayn fa-lā ithma ‘alayh, waman ta’akhkhara fa-lā ithma ‘alayhi limani ittaqā"
+  translation="Whoever hastens [to leave] after two days – there is no sin upon him; and whoever delays – there is no sin upon him – for whoever fears Allah."
+  source="Qur’an 2:203"
+  sourceLink="https://quran.com/2/203"
+/>
+
+- You may leave Mina **before sunset on the 12th** (after Rami) — no penalty.
+- If you stay for the 13th, repeat the same stoning routine.
+
+---
+
+## Summary
+
+| Day       | Action                                       |
+|-----------|----------------------------------------------|
+| 11th      | Stone 3 Jamarat after Dhuhr                  |
+| 12th      | Repeat stoning 3 Jamarat                     |
+| 13th      | Optional — repeat if you remain in Mina      |
+| Nights    | Spend night in Mina (required for 11th & 12th) |
+| Du‘a      | After first 2 Jamarat only                   |
+
+---
+
+Let me know if you want a printable summary or timeline for all 6 days together.
