--- a/src/content/docs/guide/umrah.mdx
+++ b/src/content/docs/guide/umrah.mdx
@@ -1,5 +1,105 @@
 ---
-title: Umrah Guide
+title: Umrah
+description: Learn how to perform Umrah step-by-step according to the Sunnah.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+Umrah is the lesser pilgrimage — a concise but highly rewarding act of worship. Unlike Hajj, it is not restricted to specific dates and can be performed year-round.
+
+---
+
+## Pillars of Umrah
+
+Umrah has **four essential components**:
+
+1. **Ihram** – Intention from the Miqat, entering the sacred state.
+2. **Tawaf** – Circling the Ka‘bah seven times.
+3. **Sa’ee** – Walking between the hills of Safa and Marwah.
+4. **Halq or Taqsir** – Shaving or trimming the hair.
+
+Leaving out any of these invalidates the Umrah.
+
+---
+
+## Step-by-Step: Performing Umrah
+
+### 1. Entering Ihram at the Miqat
+
+- Cleanse yourself, wear the Ihram garments, and make the niyyah (intention) for Umrah.
+- Begin reciting the **Talbiyah**:  
+
+<Citation
+  arabic="لَبَّيْكَ اللَّهُمَّ لَبَّيْكَ، لَبَّيْكَ لَا شَرِيكَ لَكَ لَبَّيْكَ، إِنَّ الْحَمْدَ وَالنِّعْمَةَ لَكَ وَالْمُلْكَ، لَا شَرِيكَ لَكَ"
+  transliteration="Labbayk Allahumma Labbayk, Labbayka lā sharīka laka Labbayk, innal-ḥamda wan-ni‘mata laka wal-mulk, lā sharīka lak."
+  translation="Here I am, O Allah, here I am. Here I am, You have no partner, here I am. Verily, all praise, grace, and sovereignty belong to You. You have no partner."
+  source="Sahih al-Bukhari 1549"
+  sourceLink="https://sunnah.com/bukhari:1549"
+/>
+
+---
+
+### 2. Tawaf of the Ka‘bah
+
+- Begin at the Black Stone, saying “Bismillah, Allahu Akbar”.
+- Complete 7 counter-clockwise circuits.
+- Men: uncover the right shoulder (Idtiba) and jog lightly (Ramal) in the first 3 circuits.
+- After completing Tawaf, pray 2 rak‘at behind Maqam Ibrahim (if possible).
+
+> There's no fixed du‘a during Tawaf; recite Qur’an, make du‘a, and glorify Allah from the heart.
+
+---
+
+### 3. Sa’ee Between Safa and Marwah
+
+- Begin at Safa with the verse:
+
+<Citation
+  arabic="۞ إِنَّ ٱلصَّفَا وَٱلْمَرْوَةَ مِن شَعَآئِرِ ٱللَّهِ ۖ فَمَنْ حَجَّ ٱلْبَيْتَ أَوِ ٱعْتَمَرَ فَلَا جُنَاحَ عَلَيْهِ أَن يَطَّوَّفَ بِهِمَا ۚ وَمَن تَطَوَّعَ خَيْرًۭا فَإِنَّ ٱللَّهَ شَاكِرٌ عَلِيمٌ"
+  translation="Indeed, Safa and Marwah are among the symbols of Allah."
+  source="Qur’an 2:158"
+  sourceLink="https://quran.com/2/158"
+/>
+
+- Walk to Marwah and back, completing 7 legs.
+- Men jog between the green lights (Mas‘aa).
+- There is no required du‘a; make personal supplications throughout.
+
+---
+
+### 4. Halq or Taqsir (Shaving or Trimming)
+
+- **Men**: Shaving (Halq) is preferred; trimming (Taqsir) is allowed.
+- **Women**: Trim a fingertip’s length from the end of the hair.
+
+<Citation
+  translation="May Allah have mercy on those who shave... and those who trim."
+  source="Sahih al-Bukhari 1720"
+  sourceLink="https://sunnah.com/bukhari:1720"
+/>
+
+---
+
+## What Invalidates Umrah
+
+- Intimacy after entering Ihram and before completing all rites.
+- Skipping any of the four pillars.
+- Crossing the Miqat without donning Ihram.
+
+> _Kitab ul Hajj_ emphasizes that even unintentional violations (e.g., scented soap) require kaffarah depending on severity.
+
+---
+
+## Spiritual Value of Umrah
+
+Umrah is not simply a ritual — it's a chance to restart. The Prophet ﷺ said:
+
+<Citation
+  translation="The performance of ‘Umrah is an expiation for the sins committed between it and the previous one."
+  source="Sahih al-Bukhari 1773"
+  sourceLink="https://sunnah.com/bukhari:1773"
+/>
+
+---
+
+Let me know if you want this broken into tabbed steps for mobile UX or need a downloadable checklist to go with it.
