--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,46 +1,51 @@
 ---
-title: Hajj Guide
-description: Why Hajj matters, what this guide covers, and how to use it.
+title: 'Stay focused on worship, not worry'
+description: A practical and concise Hajj guide grounded in Qur’an, Sunnah, and authentic scholarly sources.
 ---
 
-Hajj is not just a journey across lands—it is a journey within.
+Welcome to hajjfocus.com's Hajj Guide — a practical, concise, and skimmable manual designed for first-time pilgrims. Whether you're preparing months in advance or reviewing on the go in Mina, this guide gives you clear, step-by-step support for every part of the journey.
 
-This guide is designed to serve two types of readers:
+It avoids overcomplication and speculative rulings — instead, it sticks to what’s clear: **authentic sources**, practical checklists, and honest advice.
 
-- 🧳 **The first-time pilgrim** looking for a simple, practical manual.
-- 📖 **The returning pilgrim or student of knowledge** who wants a reliable, quick-reference resource.
+---
 
-## Purpose of this Guide
+## Why This Guide?
 
-Too many Hajj books are either too long or too vague. This one aims to be:
+- Grounded in **Qur’an**, **Sahih Hadith**, and the consensus of major scholars.
+- Designed for **clarity**, **brevity**, and **quick lookup** — even from your phone.
+- Step-by-step pages for each **day of Hajj**, including what to do, what to avoid, and what matters most.
+- No unnecessary fatwas, fringe opinions, or distractions.
 
-- ✅ **Concise** — no fluff, just what you need
-- 📌 **Skimmable** — clean headings and bullet points for quick reference
-- 🧠 **Actionable** — each step clearly explains *what*, *why*, and *how*
-- 💭 **Reflective** — not just logistics, but also spiritual grounding
+---
 
-## What is Hajj?
+## Who This Is For
 
-Hajj is the fifth pillar of Islam—an obligation upon every Muslim who is physically and financially able, once in their lifetime.
+- First-time pilgrims looking for clarity, not complexity.
+- Group leaders and family heads guiding others.
+- Anyone who wants to focus on worship, not worry.
 
-> **“And [due] to Allah from the people is a pilgrimage to the House—for whoever is able to find thereto a way.”**  
-> — _Surah Aal Imran 3:97_
+---
 
-It commemorates the legacy of Ibrahim (عليه السلام), the sacrifice, the surrender, and ultimately the return to Allah.
+## What’s Inside
 
-## What This Guide Covers
+- A **[day-by-day breakdown of Hajj](/guide/day-1)**
+- A guide on **[Umrah](/guide/umrah)**
+- Essential **[checklists](/reference/checklists)** (packing, rituals, daily duties)
+- Pages on [mindset, intention, and sabr](/guide/mindset)
+- A detailed **[FAQ](/reference/faqs)** for common mistakes and rulings
+- A **[glossary](/reference/glossary)** of key Hajj terms in Arabic and English
+- A guide to **[visiting Madinah](/guide/visiting-madinah)** (optional but highly recommended)
 
-- Planning & preparation (before you go)
-- Step-by-step rituals with day-by-day breakdowns
-- Duas, tips, and checklists
-- Common pitfalls and how to handle them
-- Reflections for after you return
+---
 
-## How to Use This Guide
+## What This Guide Is Not
 
-- Use the **sidebar** to jump to specific days or topics
-- Tap on **checklists and tips** when planning
-- Come back to the **ritual breakdowns** when you're on the ground
-- Skim the **FAQs** if something goes wrong
+- Not a replacement for your **group scholar** or **Mu’allim**
+- Not filled with fringe or unauthenticated views
+- Not a travel blog — no fluff, no filler
 
-This guide works great offline—consider saving the page or exporting as a PDF before you travel.
+---
+
+This guide is a companion — not a crutch. Make du‘a, trust in Allah, and stay present in every step of your Hajj.  
+May Allah accept it from you, purify you, and return you forgiven.
+
