--- a/src/content/docs/reference/duas.mdx
+++ b/src/content/docs/reference/duas.mdx
@@ -1,5 +1,331 @@
 ---
-title: Duas & Dhikr
+title: Duas for Hajj and Umrah
+description: Supplications recited during various rites of Hajj and Umrah, compiled from the Hajj Dua Guide.
 ---
 
-Coming soon!
+import Citation from '../../../components/Citation.astro';
+
+---
+
+## While Entering into Ihram
+
+<Citation
+  arabic="نَوَيْتُ الْحَجَّ وَأَحْرَمْتُ بِهِ لِلَّهِ تَعَالَى"
+  transliteration="Nawaytu al-Ḥajja wa aḥramtu bihi lillāhi taʿālā."
+  translation="I intend to perform Hajj and have entered into Ihram for it, for the sake of Allah, the Most High."
+  source="Commonly recited as intention at Miqat; see IslamQA 26756"
+  sourceLink="https://islamqa.info/en/answers/26756"
+/>
+
+You can also add the type of Hajj (e.g., Tamattu‘):  
+**"Nawaytu al-ʿUmrah"** or **"Nawaytu al-Ḥajj tamattuʿan..."**
+
+---
+
+## Talbiyah
+
+<Citation
+  arabic="لَبَّيْكَ اللَّهُمَّ لَبَّيْك، لَبَّيْكَ لَا شَرِيكَ لَكَ لَبَّيْك، إِنَّ الْحَمْدَ وَالنِّعْمَةَ لَكَ وَالْمُلْك، لَا شَرِيكَ لَكَ"
+  transliteration="Labbayk Allāhumma labbayk, labbayka lā sharīka laka labbayk. Inna al-ḥamda wan-niʿmata laka wal-mulk, lā sharīka lak."
+  translation="Here I am, O Allah, here I am. You have no partner. All praise, grace, and dominion belong to You. You have no partner."
+  source="Sahih Muslim 1184a"
+  sourceLink="https://sunnah.com/muslim:1184a"
+/>
+
+Repeat frequently, especially:
+- After prayers
+- When ascending/descending
+- Entering/exiting a crowd
+- At changes of location
+
+---
+
+## Entering Makkah (Upon Seeing the City)
+
+<Citation
+  arabic="اللَّهُمَّ هَذِهِ بَلْدَتُكَ، وَأَنْتَ أَدْخَلْتَنِيهَا، فَاجْعَلْنِي بِهَا مُرْتَكِبًا لِأَهْلِهَا، كَرِيمًا عَلَيْهِمْ، مُحَبًّا إِلَيْهِمْ"
+  transliteration="Allāhumma hādhihi baldatuka wa anta adkhaltanīhā, fājʿalnī bihā murtaqiban li-ahlihā, karīman ʿalayhim, muḥabban ilayhim."
+  translation="O Allah, this is Your sacred town, and You have caused me to enter it. Make me beloved to its people and honourable among them."
+  source="Adapted du‘ā; not in specific hadith collections"
+  sourceLink="https://islamqa.info/en/answers/104556"
+/>
+
+---
+
+## Du‘ā Upon Entering Masjid al-Haram
+
+<Citation
+  arabic="بِسْمِ اللَّهِ، اللَّهُمَّ صَلِّ عَلَىٰ مُحَمَّدٍ، اللَّهُمَّ اغْفِرْ لِي ذُنُوبِي، وَافْتَحْ لِي أَبْوَابَ رَحْمَتِكَ"
+  transliteration="Bismillāh, Allāhumma ṣalli ʿalā Muḥammad, Allāhumma ighfir lī dhunūbī, waftaḥ lī abwāba raḥmatik."
+  translation="In the name of Allah. O Allah, send blessings upon Muhammad. O Allah, forgive my sins and open for me the gates of Your mercy."
+  source="Sahih Muslim 714 (general masjid entry du‘ā)"
+  sourceLink="https://sunnah.com/muslim:714"
+/>
+
+---
+
+## At the Black Stone (Start of Each Round)
+
+<Citation
+  arabic="بِسْمِ اللَّهِ، وَاللَّهُ أَكْبَرُ"
+  transliteration="Bismillāh, wa-Allāhu akbar."
+  translation="In the name of Allah, and Allah is the Greatest."
+  source="Sahih Bukhari 1603"
+  sourceLink="https://sunnah.com/bukhari:1603"
+/>
+
+This is recited at the beginning of each round when aligned with the **Ḥajar al-Aswad** (Black Stone). If you can’t kiss or touch the stone, raise your hand towards it and say the above.
+
+---
+
+## Between the Yemeni Corner and the Black Stone
+
+<Citation
+  arabic="رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً، وَفِي الآخِرَةِ حَسَنَةً، وَقِنَا عَذَابَ النَّارِ"
+  transliteration="Rabbana ātinā fī al-dunyā ḥasanah wa fī al-ākhirati ḥasanah wa qinā ʿadhāba al-nār."
+  translation="Our Lord, give us in this world [that which is] good and in the Hereafter [that which is] good and protect us from the punishment of the Fire."
+  source="Sunan Abi Dawud 1892"
+  sourceLink="https://sunnah.com/abudawud:1892"
+/>
+
+This is the **only authentic** specific du‘ā narrated from the Prophet ﷺ during Tawaf.
+
+---
+
+## Other Recommended Du‘ā During Tawaf
+
+While no other specific supplications are fixed, you may recite:
+- Dhikr: **"SubḥānAllāh"**, **"Alḥamdulillāh"**, **"Allāhu Akbar"**
+- Salawat upon the Prophet ﷺ
+- Personal du‘ā in your language
+
+> "Tawaf is for the remembrance of Allah." — [IslamQA Fatwa 106556](https://islamqa.info/en/answers/106556)
+
+---
+
+## After Completing Tawaf (Before Sa’ee)
+
+At **Maqām Ibrāhīm**, pray two rak‘āt and recite:
+
+### During the Prayer:
+- Surah Al-Kāfirūn in the first rak‘ah
+- Surah Al-Ikhlāṣ in the second rak‘ah (recommended)
+
+Afterwards, drink Zamzam and make du‘ā:
+
+<Citation
+  arabic="اللَّهُمَّ إِنِّي أَسْأَلُكَ عِلْمًا نَافِعًا، وَرِزْقًا وَاسِعًا، وَشِفَاءً مِنْ كُلِّ دَاءٍ"
+  transliteration="Allāhumma innī as’aluka ʿilman nāfiʿan, wa rizqan wāsiʿan, wa shifā’an min kulli dā’."
+  translation="O Allah, I ask You for beneficial knowledge, abundant provision, and healing from every disease."
+  source="Mustadrak al-Hakim 1739"
+  sourceLink="https://sunnah.com/hakim:1739"
+/>
+
+---
+
+## Beginning Sa’ee at Safa
+
+Start by facing the Ka‘bah and recite the verse:
+
+<Citation
+  arabic="إِنَّ الصَّفَا وَالْمَرْوَةَ مِن شَعَائِرِ اللَّهِ"
+  transliteration="Inna al-ṣafā wa al-marwata min shaʿā’iri Allāh."
+  translation="Indeed, Safa and Marwah are among the symbols of Allah."
+  source="Surah Al-Baqarah 2:158"
+  sourceLink="https://quran.com/2/158"
+/>
+
+Then say:
+
+<Citation
+  arabic="أَبْدَأُ بِمَا بَدَأَ اللَّهُ بِهِ"
+  transliteration="Abda’u bimā bada’a Allāhu bih."
+  translation="I begin with what Allah began with."
+  source="Sahih Muslim 1218"
+  sourceLink="https://sunnah.com/muslim:1218"
+/>
+
+---
+
+## At Mount Safa (Facing Ka‘bah)
+
+Raise your hands and recite:
+
+<Citation
+  arabic="اللَّهُ أَكْبَرُ، اللَّهُ أَكْبَرُ، اللَّهُ أَكْبَرُ، لَا إِلَهَ إِلَّا اللَّهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ، يُحْيِي وَيُمِيتُ، وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ..."
+  transliteration="Allāhu akbar, Allāhu akbar, Allāhu akbar, lā ilāha illallāh waḥdahu lā sharīka lah, lahu al-mulku wa lahu al-ḥamdu, yuḥyī wa yumītu wa huwa ʿalā kulli shay’in qadīr..."
+  translation="Allah is the Greatest, Allah is the Greatest, Allah is the Greatest. There is no deity but Allah alone without partner. To Him belongs dominion and all praise. He gives life and causes death, and He has power over all things."
+  source="Sahih Muslim 1218"
+  sourceLink="https://sunnah.com/muslim:1218"
+/>
+
+Make any du‘ā you like. Repeat the above **three times**, making personal du‘ā in between.
+
+---
+
+## Between the Green Markers (Men Only)
+
+Men should jog briskly between the green lights and say:
+
+<Citation
+  arabic="رَبِّ اغْفِرْ وَارْحَمْ، إِنَّكَ أَنْتَ الْأَعَزُّ الْأَكْرَمُ"
+  transliteration="Rabbi ighfir wa irḥam, innaka anta al-aʿazzu al-akram."
+  translation="My Lord, forgive and have mercy. You are the Most Mighty, the Most Noble."
+  source="Sunan al-Kubrá lil-Bayhaqī 5/96"
+  sourceLink="https://www.al-islam.com/Document/Book/41/5"
+/>
+
+---
+
+## At Marwah
+
+When you reach Marwah, repeat the same du‘ā and invocation as you did at Safa.
+
+Complete 7 rounds between Safa and Marwah, ending at **Marwah**.
+
+> You may make any personal du‘ā throughout Sa’ee. There are no fixed du‘ās for each lap beyond what’s mentioned above.
+
+---
+
+## Day of Arafah
+
+The Prophet ﷺ said:
+
+> "The best supplication is that which is made on the Day of Arafah. The best of what I and the Prophets before me have said is:"
+
+<Citation
+  arabic="لَا إِلَهَ إِلَّا اللَّهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ، وَلَهُ الْحَمْدُ، وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ"
+  transliteration="Lā ilāha illallāhu waḥdahu lā sharīka lah, lahu al-mulku wa lahu al-ḥamdu wa huwa ʿalā kulli shay’in qadīr."
+  translation="There is no god but Allah alone, without any partner. To Him belongs the dominion, and all praise, and He has power over all things."
+  source="Sunan al-Tirmidhī 3585"
+  sourceLink="https://sunnah.com/tirmidhi:3585"
+/>
+
+This should be repeated frequently throughout the day. One should also make as much personal du‘ā as possible — humbly, sincerely, and facing the Qiblah.
+
+---
+
+## At Muzdalifah (After Maghrib and Isha)
+
+There is no specific narrated du‘ā, but after praying Maghrib and Isha at Muzdalifah, one may rest and make dhikr or personal du‘ā.
+
+Upon waking for Fajr, stand facing the Qiblah and make du‘ā, as the Prophet ﷺ did:
+
+> "He stood until it became very bright, and he supplicated, glorified Allah, magnified Him, and proclaimed His Oneness."  
+> — [Sahih Muslim 1284a](https://sunnah.com/muslim:1284a)
+
+No fixed words are mentioned; engage in:
+- **Tasbīḥ** (Subḥān Allāh)
+- **Taḥmīd** (Alḥamdulillāh)
+- **Takbīr** (Allāhu Akbar)
+- Personal requests in any language
+
+> 🔗 [IslamQA: Duas for Arafah and Muzdalifah](https://islamqa.info/en/answers/70282)
+
+---
+
+## Rami (Stoning the Jamarāt)
+
+There is **no specific du‘ā narrated** for throwing each pebble. However, it is Sunnah to say:
+
+<Citation
+  arabic="اللَّهُ أَكْبَرُ"
+  transliteration="Allāhu Akbar"
+  translation="Allah is the Greatest"
+  source="Sahih al-Bukhari 1751"
+  sourceLink="https://sunnah.com/bukhari:1751"
+/>
+
+Say it once with **each stone**. After stoning the **first and second Jamarāt**, you may:
+- Step aside
+- Face the Qiblah
+- Raise your hands
+- Make **lengthy du‘ā**
+
+> 🔗 [IslamQA: Du‘ā after Rami](https://islamqa.info/en/answers/34390)
+
+---
+
+## Slaughtering the Hady (Nahr)
+
+Say this before slaughtering:
+
+<Citation
+  arabic="بِسْمِ اللَّهِ، وَاللَّهُ أَكْبَرُ، اللَّهُمَّ هَذَا مِنْكَ وَلَكَ"
+  transliteration="Bismillāh, wa-Allāhu akbar, Allāhumma hādhā minka wa laka."
+  translation="In the name of Allah, and Allah is the Greatest. O Allah, this is from You and for You."
+  source="Sunan Abi Dawud 2795"
+  sourceLink="https://sunnah.com/abudawud:2795"
+/>
+
+If using a proxy or app to arrange your sacrifice, you may say:
+> "O Allah, accept this sacrifice from me."
+
+> 🔗 [IslamWeb: Difference between Hajj and Eid sacrifice](https://www.islamweb.net/en/fatwa/90453)
+
+---
+
+## Shaving or Trimming the Hair (Halq or Taqsir)
+
+Say:
+
+<Citation
+  arabic="اللَّهُمَّ اغْفِرْ لِلْمُحَلِّقِينَ"
+  transliteration="Allāhumma ighfir lil-muḥalliqīn."
+  translation="O Allah, forgive those who shave their heads."
+  source="Sahih al-Bukhari 1727"
+  sourceLink="https://sunnah.com/bukhari:1727"
+/>
+
+This is part of a longer hadith where the Prophet ﷺ made du‘ā **three times** for those who shaved, and **once** for those who cut.
+
+Women: Trim a **small portion** (a fingertip’s length) from each braid or hair end — **not shave**.
+
+> 🔗 [IslamQA: Ruling on trimming for women](https://islamqa.info/en/answers/109326)
+
+---
+
+## Tawaf al-Wada‘ (Farewell Tawaf)
+
+This is the final rite before leaving Makkah.
+
+There is **no specific du‘ā** for Tawaf al-Wada‘. You may:
+- Recite general **dhikr**
+- Make **personal du‘ās**
+- Repeat Qur’anic supplications
+
+Use the same supplications mentioned during regular Tawaf, especially:
+
+<Citation
+  arabic="رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً، وَفِي الآخِرَةِ حَسَنَةً، وَقِنَا عَذَابَ النَّارِ"
+  transliteration="Rabbana ātinā fī al-dunyā ḥasanah wa fī al-ākhirati ḥasanah wa qinā ʿadhāba al-nār."
+  translation="Our Lord, give us in this world [that which is] good and in the Hereafter [that which is] good and protect us from the punishment of the Fire."
+  source="Sunan Abi Dawud 1892"
+  sourceLink="https://sunnah.com/abudawud:1892"
+/>
+
+---
+
+## Du‘ā When Leaving the Haram (Farewell Supplication)
+
+<Citation
+  arabic="اللَّهُمَّ لَا تَجْعَلْ هَذَا آخِرَ الْعَهْدِ مِنْ بَيْتِكَ الْحَرَامِ"
+  transliteration="Allāhumma lā tajʿal hādhā ākhir al-ʿahd min baytika al-ḥarām."
+  translation="O Allah, do not make this my last visit to Your Sacred House."
+  source="IslamWeb Fatwa 34260"
+  sourceLink="https://www.islamweb.net/en/fatwa/34260"
+/>
+
+> There is no blame upon one who cries or feels sorrow when making this du‘ā. The Prophet ﷺ was deeply emotionally connected to the Ka‘bah and the Haram.
+
+---
+
+## Additional Closing Du‘ā
+
+<Citation
+  arabic="اللَّهُمَّ ارْزُقْنِي رِجْعَةً إِلَىٰ بَيْتِكَ الْحَرَامِ، فِي عَامٍ قَادِمٍ"
+  transliteration="Allāhumma urzuqnī rujʿatan ilā baytika al-ḥarām fī ʿāmin qādim."
+  translation="O Allah, grant me the chance to return to Your Sacred House next year."
+  source="Common personal supplication"
+/>
+
