--- a/src/content/docs/reference/faqs.mdx
+++ b/src/content/docs/reference/faqs.mdx
@@ -1,5 +1,181 @@
 ---
-title: FAQs & Issues
+title: FAQs & Common Issues
+description: A comprehensive list of common Hajj questions, grouped by topic.
 ---
 
-Coming soon!
+Grouped by topic for clarity. These are based on real scenarios, common concerns, and fiqh opinions from major scholars.
+
+---
+
+## 🧕 Ihram & Clothing
+
+**Q: Can I wear sandals with stitches in Ihram (men)?**  
+A: Yes. The restriction is on **stitched garments**, not sandals. The ankles and upper foot must remain uncovered.
+
+**Q: Can I use scented lip balm or creams in Ihram?**  
+A: No. Anything scented is forbidden unless it wore off before donning Ihram.
+
+**Q: Can I cover my head with a hood or scarf (men)?**  
+A: No. Men must keep their head uncovered in Ihram.
+
+**Q: Can women wear socks and gloves in Ihram?**  
+A: Socks yes; gloves no. Face and hands must not be covered.
+
+**Q: Can I wear a belt or money pouch?**  
+A: Yes, as long as it doesn’t resemble stitched garments like shirts or trousers.
+
+---
+
+## 💈 Hair, Nails, and Hygiene
+
+**Q: Can I cut nails or hair in Ihram?**  
+A: No. It’s prohibited unless done out of necessity.
+
+**Q: What if I lose hair while scratching?**  
+A: Unintentional loss is excused. No penalty.
+
+**Q: Can I brush my teeth in Ihram?**  
+A: Yes. Avoid using toothpaste with a strong scent.
+
+**Q: Can I shave before leaving Makkah?**  
+A: Only after stoning and sacrifice (on 10th Dhul Hijjah).
+
+---
+
+## 🧼 Hygiene & Menstruation
+
+**Q: Can I apply deodorant in Ihram?**  
+A: No, unless it is fully **unscented**.
+
+**Q: What if menstruation starts before Tawaf al-Ifadah?**  
+A: Delay the tawaf until after ghusl. It can be performed any time afterward.
+
+**Q: Can I still do Sa‘ee if I’m menstruating?**  
+A: Only **if you’ve already done Tawaf**. Sa‘ee itself doesn’t require purity.
+
+**Q: Can women take pills to delay periods?**  
+A: Yes, after consulting a doctor.
+
+**Q: Can I shower in Ihram?**  
+A: Yes, with **unscented** products.
+
+---
+
+## 🕋 Tawaf & Sa‘ee
+
+**Q: If I lose wudu during Tawaf, must I restart?**  
+A: Yes, wudu is required. Repeat that round after regaining purity.
+
+**Q: Can I touch the Black Stone if crowded?**  
+A: Not necessary. Point towards it with your hand and say “Allahu Akbar”.
+
+**Q: Do I need to pray after Tawaf?**  
+A: Yes, two rak‘ahs behind Maqam Ibrahim if possible.
+
+**Q: Do I have to run in Sa‘ee?**  
+A: Men jog between the green lights. Women walk normally.
+
+---
+
+## 💬 Du‘a & Worship
+
+**Q: Are specific du‘as required during Tawaf?**  
+A: No. Say any du‘a, dhikr, or Qur’an. No fixed text is required.
+
+**Q: What’s the best du‘a at Arafah?**  
+A: "Lā ilāha illa Allāh, wahdahu lā sharīka lah..." Hadith in Tirmidhi 3585.
+
+**Q: What if I don’t feel spiritual?**  
+A: Hajj is an act of obedience, not emotion. Stay sincere and patient.
+
+---
+
+## 🪨 Rami (Stoning)
+
+**Q: Can someone throw pebbles on my behalf?**  
+A: Yes, for valid excuses (sickness, elderly, pregnant women).
+
+**Q: Do I need new pebbles each day?**  
+A: Yes. Collect fresh pebbles daily (preferably from Mina or Muzdalifah).
+
+**Q: I threw only 6 instead of 7 stones. Is my Rami valid?**  
+A: Try to make it up. If not possible, scholars differ — some allow it with a penalty.
+
+**Q: Can I do Rami before Dhuhr?**  
+A: Sunnah is after zawāl (sun’s zenith), but flexibility exists for valid reasons.
+
+---
+
+## 🕌 Tawaf al-Wada’ (Farewell Tawaf)
+
+**Q: Is Tawaf al-Wada’ mandatory?**  
+A: Yes — unless you’re menstruating. Do it **just before leaving Makkah**.
+
+**Q: What if I did Sa‘ee after Tawaf al-Wada’?**  
+A: Then it no longer counts as the farewell. You must repeat Tawaf.
+
+---
+
+## 🧳 Leaving Makkah & Madinah
+
+**Q: Can I leave Makkah without Tawaf al-Wada’?**  
+A: Only if menstruating. Others must perform it.
+
+**Q: Can I combine Madinah visit with Hajj?**  
+A: Yes. It’s recommended but **not part of Hajj**.
+
+**Q: Do I make a new Ihram for Madinah?**  
+A: No. It is a regular visit, not ‘Umrah.
+
+---
+
+## ♿ Elderly & Disabled
+
+**Q: Can I use a wheelchair in Tawaf?**  
+A: Yes, with no penalty.
+
+**Q: Can someone push me for Sa‘ee?**  
+A: Yes. Assistance is permitted.
+
+**Q: Do I get the same reward if I cannot walk?**  
+A: Yes. Allah rewards according to intention and ability.
+
+---
+
+## ❌ Mistakes & Penalties
+
+**Q: What if I broke a rule out of ignorance?**  
+A: Ignorance may waive penalty depending on the issue. Consult a scholar.
+
+**Q: What are common penalties?**  
+A: Dam (sacrifice), fasting, or feeding the poor — depending on the mistake.
+
+**Q: Can I delay a rite due to health issues?**  
+A: Yes. Islam allows for ease in hardship.
+
+---
+
+## 🧠 Intentions & Doubts
+
+**Q: I forgot my niyyah — is my Ihram valid?**  
+A: As long as you’re acting on the rites, the intention is assumed.
+
+**Q: I mixed up the days — is my Hajj valid?**  
+A: Depends on what was missed. Critical errors (e.g. missing Arafah) may invalidate Hajj.
+
+---
+
+## 📱 Practical Tips
+
+**Q: Can I use my phone during Hajj?**  
+A: Yes, but use it sparingly. Stay present in your worship.
+
+**Q: Can I take photos/videos?**  
+A: Not prohibited, but avoid showing off. Respect others’ privacy.
+
+**Q: Can I sleep in Haram?**  
+A: Yes, but be mindful of Salah times and cleaning staff.
+
+---
+
+Let me know if you’d like this available as collapsible sections, printable PDF, or with keyword tags for search/filtering.
