--- a/src/content/docs/guide/before-you-go.mdx
+++ b/src/content/docs/guide/before-you-go.mdx
@@ -3,6 +3,8 @@ title: Before You Go
 description: Practical and spiritual preparation for Hajj before you travel.
 ---
 
+import Citation from "../../../components/Citation.astro";
+
 Before setting out for Hajj, it is essential to prepare yourself spiritually, mentally, and practically. This journey is unlike any other — it requires a sincere heart, a sound plan, and a resilient mindset.
 
 ---
@@ -80,7 +82,12 @@ See the [Checklists page](/reference/checklists) for more detailed packing sugge
 
 You’ll recite the Talbiyah repeatedly from the moment you enter Ihram.
 
-> **Labbayk Allahumma Labbayk, Labbayka laa shareeka laka Labbayk. Innal hamda wan-ni’mata laka wal-mulk, laa shareeka lak.**
+<Citation
+  arabic="لَبَّيْكَ اللَّهُمَّ لَبَّيْكَ. لَبَّيْكَ لَا شَرِيكَ لَكَ لَبَّيْكَ. إِنَّ الْحَمْدَ وَالنِّعْمَةَ لَكَ وَالْمُلْكَ. لَا شَرِيكَ لَكَ."
+  transliteration="Labbayk Allahumma Labbayk. Labbayka laa shareeka laka Labbayk. Innal-hamda wan-ni’mata laka wal-mulk. Laa shareeka lak."
+  translation="I respond to Your call O Allah! I respond to Your call. You have no partner. I respond to Your call. All praise, thanks and blessings are for You. All sovereignty is for You. And You have no partners with You."
+  source="Talbiyah – Reported in Sahih al-Bukhari 5915"
+/>
 
 Also review morning and evening adhkar, and du'as specific to each major ritual.
 
